--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>vue_project</title>
     <link rel="stylesheet" href="/static/css/reset.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1116537_haujvppntcf.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1116537_isvz6yixaa.css">
     <!--解决0.3秒延迟-->
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
@@ -17,6 +17,20 @@
       if(!window.Promise) {
         document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
       }
+      document.addEventListener('touchstart',function(event){
+        event.preventDefault();
+      }, false)
+      //点透
+      !(function () {
+        let aNodes = document.querySelectorAll('a');
+        let i = 0;
+        for (; i < aNodes.length; i++) {
+          aNodes[i].addEventListener('touchstart', function () {
+            window.location = this.href;
+          });
+        }
+      })();
+
     </script>
   </head>
   <body>
